<resources>
    <string name="app_name">MinhHang</string>
    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="nh_p_n_i_dung_scrollview_androidx_core_widget_nestedscrollview_androidx_constraintlayout_widget_constraintlayout"><![CDATA[Nhập nội dung/> </ScrollView> </androidx.core.widget.NestedScrollView> </androidx.constraintlayout.widget.ConstraintLayout>]]></string>

    <string name="payment_through_momo">"Thanh toán"</string>
    <string name="mapping_through_momo">"Bắt đầu liên kết"</string>
    <string name="link_momo">"Liên kết MoMo"</string>
    <string name="payment_momo">"Thanh toán qua MoMo"</string>
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gửi được yêu cầu vui lòng kiểm tra lại"</string>
    <string name="chapter_title">Tiêu đề chương</string>
    <string name="type_content">Nhập nội dung…</string>
    <string name="select_one">Select one</string>
    <string name="save">Lưu</string>
    <string name="FirebaseStringToken">ciwplimWTS6bjAkWD7MeaU:APA91bHUZJMNi9lU__qCOvsI-rX3o8Yf_4TZsMlqQQdQsvTZB2_Yf0T5jqDH_DPguQyPp-Cyk4hNvCJd0sSb8R7C9SUTJEDexwXxLy1QPusO7z0JkwrHkb4q_UpLUtN2Yr2s94LmxhJA</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">ĐÓNG</string>
    <string name="hint_search">Tìm đầu truyện</string>
    <string name="pick_image">Chọn ảnh</string>
    <string name="title">*Tiêu đề</string>
    <string name="introduction">*Giới thiệu</string>
    <string name="add_story_info">Thêm thông tin</string>
    <string name="original_language">*Ngôn ngữ gốc</string>
    <string name="translated_language">Ngôn ngữ dịch</string>
    <string name="continue_">Tiếp tục</string>
    <string name="category">Thể loại</string>
    <string name="choose_category">Chọn thể loại</string>
    <string name="status">*Tình trạng</string>
    <string name="choose_status">Chọn tình trạng</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="story_info">Thông tin</string>
    <string name="story_chapter_list">Danh sách chương</string>
    <string name="add_chapter">Thêm chương</string>
    <string name="notifications">Thông báo</string>
    <string name="no_notifications">Bạn chưa có thông báo nào!</string>
    <string name="select_font">Chọn phông chữ</string>
    <string name="font_size">%d</string>
    <string name="report">Báo cáo vi phạm</string>
    <string name="config_fee">Thiết lập phí</string>
    <string name="hint_report">Hãy đưa ra dẫn chứng truyện vi phạm bản quyền hoặc nội dung không phù hợp</string>
    <string name="send">GỬI</string>\
    <string name="config">THIẾT LẬP</string>
    <string name="warining">Cảnh báo</string>
    <string name="waring_content">Bạn đã đọc truyện 30 phút rồi. Hãy cố gắng giữ gìn sức khoẻ nhé!</string>
</resources>
