<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_report"/>

    <EditText
        android:id="@+id/edtReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="10"
        android:lines="10"
        android:autofillHints=""
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="13sp"
        android:background="@drawable/bg_round_stroke"
        tools:ignore="LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="end">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/send"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>