<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/add_story_info"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imgStory"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_placeholder" />

                <TextView
                    android:id="@+id/tvPickImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="15dp"
                    android:text="@string/pick_image"
                    android:textColor="#2962FF" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/activity_write_new_tentruyen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:inputType="textNoSuggestions"
                android:maxLines="2"
                android:paddingTop="10dp"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/introduction"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/activity_write_new_item_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:inputType="textNoSuggestions"
                android:maxLines="2"
                android:paddingTop="10dp"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/original_language"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/layoutPickOriginalLanguage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_round_stroke"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tvOriginalLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose_language"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_next" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/translated_language"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/layoutPickTranslatedLanguage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_round_stroke"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tvTranslatedLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose_language"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_next" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/category"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/layoutPickCategory"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_round_stroke"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose_category"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_next" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/layoutStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_round_stroke"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose_status"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical|end"
                    android:src="@drawable/ic_next" />

            </FrameLayout>

            <LinearLayout
                android:weightSum="6"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Danh sách chương" />
                <TextView
                    android:id="@+id/activity_write_new_btn_add_new_chappter"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thêm chương" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChapters"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/activity_write_new_btn_continute"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center|bottom"
        android:background="@color/colorAccent"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />
</LinearLayout>