<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ui.AddChapterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/app_name"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:contentDescription="@string/app_name"
            android:onClick="fillContent"
            android:src="@drawable/ic_acc" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#ccc" />

            <EditText
                android:id="@+id/edtChapterName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="7dp"
                android:background="#fff"
                android:hint="@string/chapter_title"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#ccc" />

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:gravity="start"
                android:hint="@string/type_content"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textColor="#000"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FF6D00"
        android:gravity="center"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>