<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_fee"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="*Phí đọc truyện"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="number"
        android:maxLines="2"
        android:paddingTop="10dp"
        android:textSize="14sp"
        tools:ignore="LabelFor"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Hoa hồng"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtCommision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="number"
        android:editable="false"
        android:maxLines="2"
        android:paddingTop="10dp"
        android:textSize="14sp"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="end"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/config"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/text_light_blue"/>
    </LinearLayout>

</LinearLayout>